fix: multiple layout fixes for micro journeys on small-ish screen sizes

--- a/packages/micro-journeys/src/interactive-step.scss
+++ b/packages/micro-journeys/src/interactive-step.scss
@@ -2,9 +2,9 @@
 @import './nav-shared';
 
 bolt-interactive-step {
+  @include bolt-padding-left(small);
   // Override generic styles from _generic-shared.scss
   margin-bottom: 0 !important;
-  padding-left: $nav-circle-size--active / 2 + $nav-circle-border-size;
 }
 
 .c-bolt-interactive-step {
@@ -59,15 +59,17 @@ bolt-interactive-step {
   }
 
   &__body {
+    @include bolt-padding-right(small);
+    @include bolt-padding-bottom(medium);
+    @include bolt-padding-left(small);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     position: absolute;
     left: -9999px;
-    padding-bottom: bolt-spacing(medium);
-    padding-left: bolt-spacing(medium);
 
     @include bolt-mq(medium) {
+      @include bolt-padding-right(medium);
       align-items: center;
     }
 
@@ -91,11 +93,10 @@ bolt-interactive-step {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     max-width: 100%;
 
     @include bolt-mq(medium) {
-      align-items: center;
       max-width: 700px;
     }
 
